Migrate to OpenAI and Pinecone